# c-project-planning-lidiavaran

proiectC++/: CMakeLists.txt  app1.cpp  app2.cpp  blog_data.txt
